--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sass": "^1.32.8"
   },
   "dependencies": {
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "lodash.throttle": "^4.1.1"
   }
 }
